fix featured listings gap

--- a/styles/products_index.scss
+++ b/styles/products_index.scss
@@ -6,7 +6,7 @@ main.all-listings {
     width: 100%;
     display: flex;
     justify-content: space-around;
-    column-gap: 50px;
+    column-gap: 20px;
     border: 2px solid black;
     flex-wrap: wrap;
 
